# Cython-Cpp-Project

demo_cmake/: CMakeLists.txt  __init__.py  debug.sh  setup.py
demo_cmake/include/: Rectangle.h  rect.pxd
demo_cmake/src/: CMakeLists.txt  Rectangle.cpp  rect.pyx
demo_makefile/: Makefile  rect.cpp  rect.pxd  rect.pyx  rect_test.py
demo_naked/: Rectangle.h  rect.pyd  rect_test.py  run.sh  setup.py
